--- a/base.html
+++ b/base.html
@@ -41,24 +41,16 @@
     });
     </script>
 
-    {% if google_analytics %}
     <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', '{{ google_analytics[0] }}', '{{ google_analytics[1] }}');
-    ga('send', 'pageview');
+      ga('create', 'UA-82888941-1', 'auto');
+      ga('send', 'pageview');
+
     </script>
-    {% endif %}
 </head>
 
 <body{% if current_page and current_page.is_homepage %} class="homepage" {% endif %}>
