--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
     });
     </script>
 
-    
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-82888941-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body class="homepage" >
@@ -303,5 +312,5 @@ int main() {
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-08-21 15:35:54.827677
+Build Date UTC : 2016-08-21 16:45:48.946449
 -->
