--- a/compiling/index.html
+++ b/compiling/index.html
@@ -273,6 +273,16 @@ cmake --build .
 <td>OFF</td>
 <td>Force -m32 for g++ and clang++. Your build tools must support cross-compilation if this is not your native environment.</td>
 </tr>
+<tr>
+<td><code>RPCLIB_EXTRA_BUILD_FLAGS</code></td>
+<td>""</td>
+<td>Use this to pass extra flags to rpclib for building, such as</td>
+</tr>
+<tr>
+<td><code>-fPIC</code>. Please note that I don't normally test and build with such flags</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div>
         
