--- a/contributing/index.html
+++ b/contributing/index.html
@@ -292,7 +292,7 @@ contribution option, because the guidelines are less strict regarding these.</p>
 <h3 id="documentation-proofreading">Documentation, proofreading</h3>
 <p><code>rpclib</code> aims to have an exemplary quality documenation. I'm not a native speaker, so it's likely
 that there are sentences with weird constructs, misspelled words or just typos in many places.
-Correcting those are invaluable help for me. To top it off, there is always room to exapnd, clean
+Correcting those are invaluable help for me. To top it off, there is always room to expand, clean
 up and just generally improve the documentation to provide an easy learning curve for new users of
 the library.</p>
 <h3 id="htmlcss">HTML+CSS</h3>
