--- a/cookbook/index.html
+++ b/cookbook/index.html
@@ -531,7 +531,7 @@ int main() {
 int main() {
     rpc::client c(&quot;127.0.0.1&quot;, 8080);
 
-    auto a_future = c.call_async(&quot;add&quot;, 2, 3); // non-blocking, returns std::future
+    auto a_future = c.async_call(&quot;add&quot;, 2, 3); // non-blocking, returns std::future
 
     std::cout &lt;&lt; &quot;I can do something here immediately&quot; &lt;&lt; std::endl;
 
