Fixed versions page

--- a/versions/index.html
+++ b/versions/index.html
@@ -424,7 +424,7 @@
                 
                   <h1>Versions</h1>
                 
-                <p>You are reading the documentation of ... 
+                <p>You are reading the documentation of 2.2.0. 
 If, for some reason you need the documentation of older versions, you can download them from this page.</p>
 <ul>
 <li><a href="../archive/rpclib_docs_1.0.0.zip">1.0.0</a></li>
